# heat-map

./: .ai-engineer.json  .gitignore  CLAUDE.md  HANDOVER.md  README.md  SCOPE_PROGRESS.md  TRANSFER_CHECKLIST.md  package-lock.json  package.json  playwright.config.ts  test-gtm-integration.html  tsconfig.json  turbo.json  vercel.json
.gambit/: state.json
backend/: .env.example  .gcloudignore  .gitignore  API_IMPLEMENTATION.md  Dockerfile  README.md  SETUP.md  pyproject.toml  railway.json  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middlewares/: __init__.py  auth.py  rate_limit.py
backend/app/models/: __init__.py  api_key.py  click_event.py  funnel.py  funnel_event.py  funnel_step.py  mouse_move_event.py  page.py  scroll_event.py  session.py  user.py  webhook_config.py  webhook_log.py
backend/app/routes/: __init__.py  api_keys.py  connected_one.py  events.py  funnels.py  heatmaps.py  sessions.py  users.py  webhook_configs.py  webhooks.py
backend/app/schemas/: __init__.py  api_key.py  common.py  connected_one.py  event.py  funnel.py  heatmap.py  session.py  user.py  webhook.py  webhook_config.py
backend/app/services/: connected_one_service.py  webhook_service.py
docs/: API_INTEGRATION_COMPLETION.md  API_SPEC.md  CONNECTED_ONE_PROPOSAL.md  CUSTOMER_MANUAL.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  GTM_IMPLEMENTATION_GUIDE.md  GTM_INTEGRATION.md  PHASE6_COMPLETION.md  PHASE6_UI_UX_COMPLETION.md  RAILWAY_DEPLOYMENT.md  SCOPE_PROGRESS.md  (+2 more)
(+207 files in other folders)
